<resources>
    <string name="app_name">InputValidations</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No.</string>
    <string name="textWithoutSc">Text without special character</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="abtMe">About me</string>


    dateTime
    age
</resources>
