<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mycodelabs.inputvalidations.MainActivity">

<TableLayout
    android:stretchColumns="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>
        <TextView

            android:textColor="#222222"
            android:text="@string/username"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/usernameEdit"
            android:textColor="#222222"
            android:inputType="text"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:textColor="#222222"
            android:text="@string/password"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordEdit"
            android:textColor="#222222"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:textColor="#222222"
            android:text="@string/email"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailEdit"
            android:textColor="#222222"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:textColor="#222222"
            android:text="@string/mobile"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="phone"
            android:id="@+id/phoneEdit"
            android:textColor="#222222"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>


    <TableRow>
        <TextView
            android:textColor="#222222"
            android:text="@string/age"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
		    android:maxLength="3"
            android:inputType="numberDecimal"
            android:id="@+id/ageEdit"
            android:textColor="#222222"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>
        <TextView
            android:textColor="#222222"
            android:text="@string/date"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:onClick="onDateClick"
            android:drawableEnd="@drawable/ic_date_range_black_24dp"
            android:drawableRight="@drawable/ic_date_range_black_24dp"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:hint="Tap here to set date"
            android:id="@+id/dateEdit"
            android:textColor="#222222"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <Button
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_orange_dark"
        android:text="Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
       android:gravity="center_horizontal"
        />
</TableLayout>

</RelativeLayout>
